--- a/.github/workflows/issue-project.yml
+++ b/.github/workflows/issue-project.yml
@@ -19,9 +19,18 @@ jobs:
 
       - run: npm ci
 
-      - run: npm run issue-project
+      - name: Issue triage
+        run: npm run issue-project
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          ISSUE_PROJECT_OWNER: ${{ vars.ISSUE_PROJECT_OWNER }}
-          ISSUE_PROJECT_NUMBER: ${{ vars.ISSUE_PROJECT_NUMBER }}
+          ISSUE_PROJECT_OWNER: mdn
+          ISSUE_PROJECT_NUMBER: 33
           ISSUE_PROJECT_QUERY: is:public is:open label:"needs triage" -repo:mdn/browser-compat-data -repo:mdn/translated-content
+
+      - name: Engineering issues
+        run: npm run issue-project
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          ISSUE_PROJECT_OWNER: mdn
+          ISSUE_PROJECT_NUMBER: 35
+          ISSUE_PROJECT_QUERY: is:public is:open label:p0,p1,p2,p3,p4 repo:mdn/yari
