--- a/.github/workflows/issue-project.yml
+++ b/.github/workflows/issue-project.yml
@@ -25,7 +25,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           ISSUE_PROJECT_OWNER: mdn
           ISSUE_PROJECT_NUMBER: 33
-          ISSUE_PROJECT_QUERY: is:public is:open label:"needs triage" -repo:mdn/browser-compat-data -repo:mdn/translated-content
+          ISSUE_PROJECT_QUERY: org:mdn is:issue is:public is:open label:"needs triage" -repo:mdn/browser-compat-data -repo:mdn/translated-content
 
       - name: Engineering issues
         run: npm run issue-project
@@ -33,4 +33,4 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           ISSUE_PROJECT_OWNER: mdn
           ISSUE_PROJECT_NUMBER: 35
-          ISSUE_PROJECT_QUERY: is:public is:open label:p0,p1,p2,p3,p4 repo:mdn/yari
+          ISSUE_PROJECT_QUERY: repo:mdn/yari is:issue is:public is:open label:p0,p1,p2,p3,p4
