--- a/.github/workflows/issue-project.yml
+++ b/.github/workflows/issue-project.yml
@@ -27,6 +27,14 @@ jobs:
           ISSUE_PROJECT_NUMBER: 33
           ISSUE_PROJECT_QUERY: org:mdn is:issue is:public is:open label:"needs triage" -repo:mdn/browser-compat-data -repo:mdn/translated-content sort:created-asc
 
+      - name: Content issues
+        run: npm run issue-project
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          ISSUE_PROJECT_OWNER: mdn
+          ISSUE_PROJECT_NUMBER: 37
+          ISSUE_PROJECT_QUERY: 'repo:mdn/content is:issue is:public is:open label:"effort: small","effort: medium","effort: large" sort:created-asc'
+
       - name: Engineering issues
         run: npm run issue-project
         env:
