--- a/.github/workflows/issue-project.yml
+++ b/.github/workflows/issue-project.yml
@@ -42,3 +42,11 @@ jobs:
           ISSUE_PROJECT_OWNER: mdn
           ISSUE_PROJECT_NUMBER: 36
           ISSUE_PROJECT_QUERY: repo:mdn/yari is:issue is:public is:open label:p0,p1,p2,p3,p4 sort:created-asc
+
+      - name: Product issues
+        run: npm run issue-project
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          ISSUE_PROJECT_OWNER: mdn
+          ISSUE_PROJECT_NUMBER: 38
+          ISSUE_PROJECT_QUERY: 'org:mdn is:issue is:public is:open label:"Resource: Product","Resource: UX",ux sort:created-asc'
