--- a/.github/workflows/add-to-project.yml
+++ b/.github/workflows/add-to-project.yml
@@ -23,6 +23,7 @@ jobs:
         run: npm run add-to-project
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          ISSUE_PROJECT_DELAY: 3
           ISSUE_PROJECT_OWNER: mdn
           ISSUE_PROJECT_NUMBER: 33
           ISSUE_PROJECT_QUERY: org:mdn is:issue is:public is:open label:"needs triage" -repo:mdn/browser-compat-data -repo:mdn/translated-content sort:created-asc
