--- a/.github/workflows/add-to-project.yml
+++ b/.github/workflows/add-to-project.yml
@@ -26,7 +26,7 @@ jobs:
           ISSUE_PROJECT_DELAY: 3
           ISSUE_PROJECT_OWNER: mdn
           ISSUE_PROJECT_NUMBER: 33
-          ISSUE_PROJECT_QUERY: org:mdn is:issue is:public is:open label:"needs triage" -repo:mdn/browser-compat-data -repo:mdn/translated-content sort:created-asc
+          ISSUE_PROJECT_QUERY: org:mdn is:issue is:public is:open archived:false label:"needs triage" -repo:mdn/browser-compat-data -repo:mdn/translated-content sort:created-asc
 
       - name: Content issues
         run: npm run add-to-project
@@ -50,4 +50,4 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           ISSUE_PROJECT_OWNER: mdn
           ISSUE_PROJECT_NUMBER: 38
-          ISSUE_PROJECT_QUERY: 'org:mdn is:issue is:public is:open label:"Resource: Product","Resource: UX",ux sort:created-asc'
+          ISSUE_PROJECT_QUERY: 'org:mdn is:issue is:public is:open archived:false label:"Resource: Product","Resource: UX",ux sort:created-asc'
