chore(content-prs): add mdn/content prs without reviewers

--- a/.github/workflows/add-prs-to-project.yml
+++ b/.github/workflows/add-prs-to-project.yml
@@ -31,6 +31,7 @@ jobs:
             org:mdn is:pr is:public is:open archived:false sort:created-asc user-review-requested:dipikabh
             org:mdn is:pr is:public is:open archived:false sort:created-asc user-review-requested:Rumyra
             org:mdn is:pr is:public is:open archived:false sort:created-asc user-review-requested:zfox23
+            repo:mdn/content is:pr is:public is:open archived:false sort:created-asc -author:app/dependabot no:reviewers
 
       - name: Engineering PRs
         run: npm run add-to-project
