--- a/.github/workflows/add-issues-to-project.yml
+++ b/.github/workflows/add-issues-to-project.yml
@@ -42,7 +42,13 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           ISSUE_PROJECT_OWNER: mdn
           ISSUE_PROJECT_NUMBER: 36
-          ISSUE_PROJECT_QUERY: repo:mdn/yari is:issue is:public is:open label:p0,p1,p2,p3,p4 sort:created-asc
+          ISSUE_PROJECT_QUERY: |
+            is:issue is:public is:open label:p0,p1,p2,p3,p4 sort:created-asc repo:mdn/bob
+            is:issue is:public is:open label:p0,p1,p2,p3,p4 sort:created-asc repo:mdn/bcd-utils
+            is:issue is:public is:open label:p0,p1,p2,p3,p4 sort:created-asc repo:mdn/differy
+            is:issue is:public is:open label:p0,p1,p2,p3,p4 sort:created-asc repo:mdn/rumba
+            is:issue is:public is:open label:p0,p1,p2,p3,p4 sort:created-asc repo:mdn/yari
+            is:issue is:public is:open label:p0,p1,p2,p3,p4 sort:created-asc repo:mdn/workflows
 
       - name: Product issues
         run: npm run add-to-project
