--- a/.github/workflows/add-issues-to-project.yml
+++ b/.github/workflows/add-issues-to-project.yml
@@ -24,7 +24,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           ISSUE_LABEL: "needs triage"
-          ISSUE_QUERY: org:mdn is:issue is:public is:open no:label archived:false -repo:mdn/browser-compat-data -repo:mdn/curriculum -repo:mdn/translated-content sort:created-asc
+          ISSUE_QUERY: org:mdn is:issue is:public is:open no:label archived:false -repo:mdn/browser-compat-data -repo:mdn/curriculum -repo:mdn/translated-content -repo:mdn/webextensions-examples sort:created-asc
 
       - name: Issue triage
         run: npm run add-to-project
@@ -33,7 +33,7 @@ jobs:
           ISSUE_PROJECT_DELAY: 3
           ISSUE_PROJECT_OWNER: mdn
           ISSUE_PROJECT_NUMBER: 33
-          ISSUE_PROJECT_QUERY: org:mdn is:issue is:public is:open archived:false label:"needs triage" -repo:mdn/browser-compat-data -repo:mdn/translated-content sort:created-asc
+          ISSUE_PROJECT_QUERY: org:mdn is:issue is:public is:open archived:false label:"needs triage" -repo:mdn/browser-compat-data -repo:mdn/translated-content -repo:mdn/webextensions-examples sort:created-asc
 
       - name: Content issues
         run: npm run add-to-project
@@ -63,4 +63,4 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           ISSUE_PROJECT_OWNER: mdn
           ISSUE_PROJECT_NUMBER: 38
-          ISSUE_PROJECT_QUERY: 'org:mdn is:issue is:public is:open archived:false label:"Resource: Product","Resource: UX",ux sort:created-asc'
+          ISSUE_PROJECT_QUERY: 'org:mdn is:issue is:public is:open archived:false label:"Resource: Product","Resource: UX",ux -repo:mdn/browser-compat-data -repo:mdn/translated-content -repo:mdn/webextensions-examples sort:created-asc'
