--- a/.github/workflows/add-issues-to-project.yml
+++ b/.github/workflows/add-issues-to-project.yml
@@ -41,7 +41,9 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           ISSUE_PROJECT_OWNER: mdn
           ISSUE_PROJECT_NUMBER: 37
-          ISSUE_PROJECT_QUERY: 'repo:mdn/content is:issue is:public is:open label:"effort: small","effort: medium","effort: large" sort:created-asc'
+          ISSUE_PROJECT_QUERY: |
+            org:mdn is:issue is:public is:open archived:false label:"involves: Content" -label:"needs triage" sort:created-asc
+            repo:mdn/content is:issue is:public is:open label:"effort: small","effort: medium","effort: large" sort:created-asc'
 
       - name: Engineering issues
         run: npm run add-to-project
@@ -50,6 +52,7 @@ jobs:
           ISSUE_PROJECT_OWNER: mdn
           ISSUE_PROJECT_NUMBER: 36
           ISSUE_PROJECT_QUERY: |
+            org:mdn is:issue is:public is:open archived:false label:"involves: Engineering" -label:"needs triage" sort:created-asc
             is:issue is:public is:open -label:"needs triage" sort:created-asc repo:mdn/bob
             is:issue is:public is:open -label:"needs triage" sort:created-asc repo:mdn/bcd-utils
             is:issue is:public is:open -label:"needs triage" sort:created-asc repo:mdn/differy
@@ -63,7 +66,8 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           ISSUE_PROJECT_OWNER: mdn
           ISSUE_PROJECT_NUMBER: 38
-          ISSUE_PROJECT_QUERY: 'org:mdn is:issue is:public is:open archived:false label:"Resource: Product","Resource: UX",ux -repo:mdn/browser-compat-data -repo:mdn/translated-content -repo:mdn/webextensions-examples sort:created-asc'
+          ISSUE_PROJECT_QUERY: |
+            org:mdn is:issue is:public is:open archived:false label:"involves: Product","involves: UX" -label:"needs triage" sort:created-asc
 
       - name: Print rate limit
         run: gh api /rate_limit
