--- a/.github/workflows/add-prs-to-project.yml
+++ b/.github/workflows/add-prs-to-project.yml
@@ -44,12 +44,7 @@ jobs:
             org:mdn is:pr is:public is:open archived:false sort:created-asc user-review-requested:caugner
             org:mdn is:pr is:public is:open archived:false sort:created-asc user-review-requested:fiji-flo
             org:mdn is:pr is:public is:open archived:false sort:created-asc user-review-requested:LeoMcA
-            is:pr is:public is:open archived:false -author:app/dependabot review:none sort:created-asc repo:mdn/bob
-            is:pr is:public is:open archived:false -author:app/dependabot review:none sort:created-asc repo:mdn/bcd-utils
-            is:pr is:public is:open archived:false -author:app/dependabot review:none sort:created-asc repo:mdn/differy
-            is:pr is:public is:open archived:false -author:app/dependabot review:none sort:created-asc repo:mdn/rumba
-            is:pr is:public is:open archived:false -author:app/dependabot review:none sort:created-asc repo:mdn/yari
-            is:pr is:public is:open archived:false -author:app/dependabot review:none sort:created-asc repo:mdn/workflows
+            is:pr is:public is:open archived:false -author:app/dependabot review:none sort:created-asc repo:mdn/bob repo:mdn/bcd-utils repo:mdn/differy repo:mdn/rumba repo:mdn/yari repo:mdn/workflows
 
       - name: Print rate limit
         run: gh api /rate_limit
