--- a/.github/workflows/add-prs-to-project.yml
+++ b/.github/workflows/add-prs-to-project.yml
@@ -5,6 +5,10 @@ on:
     - cron: "30 * * * *"
   workflow_dispatch:
 
+env:
+  CONTENT_REPO_FILTER: repo:mdn/content repo:mdn/django-diy-blog repo:mdn/django-locallibrary-tutorial repo:mdn/express-locallibrary-tutorial repo:mdn/todo-react repo:mdn/todo-vue repo:mdn/css-examples repo:mdn/dom-examples repo:mdn/houdini-examples repo:mdn/html-examples repo:mdn/imsc-examples repo:mdn/interactive-examples repo:mdn/js-examples repo:mdn/learning-area repo:mdn/perf-examples repo:mdn/pwa-examples repo:mdn/web-components-examples repo:mdn/webassembly-examples repo:mdn/webaudio-examples repo:mdn/webvr-tests repo:mdn/beginner-html-site repo:mdn/beginner-html-site-scripted repo:mdn/beginner-html-site-styled repo:mdn/shared-assets
+  ENGINEERING_REPO_FILTER: repo:mdn/bob repo:mdn/bcd-utils repo:mdn/differy repo:mdn/rumba repo:mdn/yari repo:mdn/workflows
+
 jobs:
   add-prs-to-project:
     runs-on: ubuntu-latest
@@ -31,7 +35,7 @@ jobs:
             org:mdn is:pr is:public is:open archived:false sort:created-asc user-review-requested:dipikabh
             org:mdn is:pr is:public is:open archived:false sort:created-asc user-review-requested:Rumyra
             org:mdn is:pr is:public is:open archived:false sort:created-asc user-review-requested:zfox23
-            repo:mdn/content is:pr is:public is:open archived:false sort:created-asc -author:app/dependabot review:none
+            is:pr is:public is:open archived:false sort:created-asc -author:app/dependabot review:none ${{ env.CONTENT_REPO_FILTER }}
 
       - name: Engineering PRs
         run: npm run add-to-project
@@ -44,7 +48,7 @@ jobs:
             org:mdn is:pr is:public is:open archived:false sort:created-asc user-review-requested:caugner
             org:mdn is:pr is:public is:open archived:false sort:created-asc user-review-requested:fiji-flo
             org:mdn is:pr is:public is:open archived:false sort:created-asc user-review-requested:LeoMcA
-            is:pr is:public is:open archived:false -author:app/dependabot review:none sort:created-asc repo:mdn/bob repo:mdn/bcd-utils repo:mdn/differy repo:mdn/rumba repo:mdn/yari repo:mdn/workflows
+            is:pr is:public is:open archived:false -author:app/dependabot review:none sort:created-asc ${{ env.ENGINEERING_REPO_FILTER }}
 
       - name: Print rate limit
         run: gh api /rate_limit
