--- a/.github/workflows/add-issues-to-project.yml
+++ b/.github/workflows/add-issues-to-project.yml
@@ -34,7 +34,9 @@ jobs:
           ISSUE_QUERY: org:mdn is:issue no:label ${{ env.COMMON_FILTER }} ${{ env.EXCLUDE_REPOS }}
 
       - name: Issue triage
-        run: npm run add-to-project
+        run: |
+          npm run add-to-project
+          npm run manage-project-items
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           ISSUE_PROJECT_DELAY: 1
@@ -43,7 +45,9 @@ jobs:
           ISSUE_PROJECT_QUERY: org:mdn is:issue label:"needs triage" ${{ env.COMMON_FILTER }} ${{ env.EXCLUDE_LABELS }} ${{ env.EXCLUDE_REPOS }}
 
       - name: Content issues
-        run: npm run add-to-project
+        run: |
+          npm run add-to-project
+          npm run manage-project-items
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           ISSUE_PROJECT_OWNER: mdn
@@ -53,7 +57,9 @@ jobs:
             is:issue label:"effort: small","effort: medium","effort: large" ${{ env.COMMON_FILTER }} ${{ env.EXCLUDE_LABELS }} ${{ env.CONTENT_REPO_FILTER }}
 
       - name: Engineering issues
-        run: npm run add-to-project
+        run: |
+          npm run add-to-project
+          npm run manage-project-items
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           ISSUE_PROJECT_OWNER: mdn
@@ -63,7 +69,9 @@ jobs:
             is:issue -label:"needs triage" ${{ env.COMMON_FILTER }} ${{ env.EXCLUDE_LABELS }} ${{ env.ENGINEERING_REPO_FILTER }}
 
       - name: Product issues
-        run: npm run add-to-project
+        run: |
+          npm run add-to-project
+          npm run manage-project-items
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           ISSUE_PROJECT_OWNER: mdn
