--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "author": "Claas Augner <caugner@mozilla.com>",
   "license": "MIT",
   "dependencies": {
-    "@actions/github": "^6.0.0",
+    "@octokit/core": "^5.0.1",
+    "@octokit/plugin-paginate-rest": "^9.1.4",
+    "@octokit/plugin-rest-endpoint-methods": "^10.1.5",
+    "@octokit/plugin-throttling": "^8.1.3",
     "dotenv": "^16.3.1"
   },
   "scripts": {
