--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@octokit/core": "^5.0.1",
     "@octokit/plugin-paginate-rest": "^9.1.4",
     "@octokit/plugin-rest-endpoint-methods": "^10.1.5",
+    "@octokit/plugin-retry": "^6.0.1",
     "@octokit/plugin-throttling": "^8.1.3",
     "dotenv": "^16.3.1"
   },
