--- a/.github/workflows/add-prs-to-project.yml
+++ b/.github/workflows/add-prs-to-project.yml
@@ -41,7 +41,6 @@ jobs:
             org:mdn is:pr user-review-requested:dipikabh ${{ env.COMMON_FILTER }}
             org:mdn is:pr user-review-requested:pepelsbey ${{ env.COMMON_FILTER }}
             org:mdn is:pr user-review-requested:Rumyra ${{ env.COMMON_FILTER }}
-            org:mdn is:pr user-review-requested:zfox23 ${{ env.COMMON_FILTER }}
             is:pr review:none -author:app/dependabot  ${{ env.COMMON_FILTER }} ${{ env.CONTENT_REPO_FILTER }}
 
       - name: Engineering PRs
@@ -54,6 +53,7 @@ jobs:
           ISSUE_PROJECT_NUMBER: 40
           ISSUE_PROJECT_QUERY: |
             org:mdn is:pr team-review-requested:mdn/core-dev ${{ env.COMMON_FILTER }}
+            org:mdn is:pr user-review-requested:argl ${{ env.COMMON_FILTER }}
             org:mdn is:pr user-review-requested:caugner ${{ env.COMMON_FILTER }}
             org:mdn is:pr user-review-requested:fiji-flo ${{ env.COMMON_FILTER }}
             org:mdn is:pr user-review-requested:LeoMcA ${{ env.COMMON_FILTER }}
