--- a/.github/workflows/add-issues-to-project.yml
+++ b/.github/workflows/add-issues-to-project.yml
@@ -47,6 +47,16 @@ jobs:
           ISSUE_PROJECT_NUMBER: 33
           ISSUE_PROJECT_QUERY: org:mdn is:issue label:"needs triage" ${{ env.COMMON_FILTER }} ${{ env.EXCLUDE_LABELS }} ${{ env.EXCLUDE_REPOS }}
 
+      - name: AI Help feedback
+        run: |
+          npm run add-to-project
+          npm run manage-project-items
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          ISSUE_PROJECT_OWNER: mdn
+          ISSUE_PROJECT_NUMBER: 42
+          ISSUE_PROJECT_QUERY: repo:mdn/ai-feedback repo:mdn/private-ai-feedback is:issue
+
       - name: Content issues
         run: |
           npm run add-to-project
