--- a/.github/workflows/add-prs-to-project.yml
+++ b/.github/workflows/add-prs-to-project.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Content PRs
         run: |
           npm run add-to-project
-          #npm run manage-project-items
+          npm run manage-project-items
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           ISSUE_PROJECT_OWNER: mdn
