fix(husky): migrate to v9

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "add-labels": "node src/add-labels.js",
     "add-to-project": "node src/add-to-project.js",
     "manage-project-items": "node src/manage-project-items.js",
-    "prepare": "husky install"
+    "prepare": "husky || true"
   },
   "devDependencies": {
     "husky": "^9.0.11",
