enhance(workflows): add ping
Allows us to get notified when the
worklow has stopped running again.

--- a/.github/workflows/add-issues-to-project.yml
+++ b/.github/workflows/add-issues-to-project.yml
@@ -92,6 +92,12 @@ jobs:
           ISSUE_PROJECT_QUERY: |
             org:mdn is:issue label:"involves: Product","involves: UX" -label:"needs triage" ${{ env.COMMON_FILTER }} ${{ env.EXCLUDE_REPOS }}
 
+      - name: Ping
+        env:
+          ping_url: ${{ secrets.PING_URL_ISSUES }}
+        if: ${{ env.ping_url != '' }}
+        run: curl ${{ env.ping_url }}
+
       - name: Print rate limit
         run: gh api /rate_limit
         env:
