Revert "fix(prs): add missing "org:mdn""
This reverts commit 54ec8cb3952a8b05486dc2d262f97b3083c911eb.

--- a/.github/workflows/add-prs-to-project.yml
+++ b/.github/workflows/add-prs-to-project.yml
@@ -41,7 +41,7 @@ jobs:
             org:mdn is:pr user-review-requested:dipikabh ${{ env.COMMON_FILTER }}
             org:mdn is:pr user-review-requested:pepelsbey ${{ env.COMMON_FILTER }}
             org:mdn is:pr user-review-requested:Rumyra ${{ env.COMMON_FILTER }}
-            org:mdn is:pr review:none -author:app/dependabot ${{ env.COMMON_FILTER }} ${{ env.CONTENT_REPO_FILTER }}
+            is:pr review:none -author:app/dependabot ${{ env.COMMON_FILTER }} ${{ env.CONTENT_REPO_FILTER }}
 
       - name: Engineering PRs
         run: |
