--- a/.github/workflows/add-prs-to-project.yml
+++ b/.github/workflows/add-prs-to-project.yml
@@ -40,6 +40,7 @@ jobs:
             org:mdn is:pr user-review-requested:bsmth ${{ env.COMMON_FILTER }}
             org:mdn is:pr user-review-requested:dipikabh ${{ env.COMMON_FILTER }}
             org:mdn is:pr user-review-requested:pepelsbey ${{ env.COMMON_FILTER }}
+            org:mdn is:pr user-review-requested:pransh15 ${{ env.COMMON_FILTER }}
             org:mdn is:pr user-review-requested:Rumyra ${{ env.COMMON_FILTER }}
             is:pr review:none -author:app/dependabot ${{ env.COMMON_FILTER }} ${{ env.CONTENT_REPO_FILTER }}
 
