--- a/.github/workflows/add-issues-to-project.yml
+++ b/.github/workflows/add-issues-to-project.yml
@@ -57,6 +57,14 @@ jobs:
           ISSUE_PROJECT_NUMBER: 42
           ISSUE_PROJECT_QUERY: repo:mdn/ai-feedback repo:mdn/private-ai-feedback is:issue
 
+      - name: BCD issues
+        run: |
+          npm run manage-project-items
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          ISSUE_PROJECT_OWNER: mdn
+          ISSUE_PROJECT_NUMBER: 47
+
       - name: Content issues
         run: |
           npm run add-to-project
