--- a/.github/workflows/add-issues-to-project.yml
+++ b/.github/workflows/add-issues-to-project.yml
@@ -65,6 +65,14 @@ jobs:
           ISSUE_PROJECT_OWNER: mdn
           ISSUE_PROJECT_NUMBER: 47
 
+      - name: BCD meeting agenda
+        run: |
+          npm run manage-project-items
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          ISSUE_PROJECT_OWNER: mdn
+          ISSUE_PROJECT_NUMBER: 52
+
       - name: Content issues
         run: |
           npm run add-to-project
