--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,20 @@ updates:
     schedule:
       interval: "weekly"
     open-pull-requests-limit: 10
+    groups:
+      prod:
+        dependency-type: production
+        update-types:
+          - minor
+          - patch
+      dev:
+        dependency-type: development
+        update-types:
+          - minor
+          - patch
+    commit-message:
+      prefix: "chore(deps): "
+      prefix-development: "chore(deps-dev): "
 
   - package-ecosystem: "github-actions"
     directory: "/"
