--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,5 @@
 GH_TOKEN=(Insert personal access token)
+SENTRY_DSN=(Insert Sentry DSN or leave blank to disable)
 ISSUE_PROJECT_OWNER=mdn
 ISSUE_PROJECT_NUMBER=(Insert project number)
 ISSUE_PROJECT_QUERY='is:public is:open archived:false label:"needs triage" -repo:mdn/browser-compat-data -repo:mdn/translated-content'
